My files update

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
     <link rel="stylesheet" href="./styles.css" />
     <link
       rel="stylesheet"
@@ -25,150 +26,446 @@
     />
 
     <title>Mealtime.ng</title>
+
+    <!-- Link Swiper's CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+    />
   </head>
+
   <body>
-    <nav class="navbar">
+    <header>
+      <nav class="navbar">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="./Images/logo 1.png" />
+          </a>
+          <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <div class="dropdown">
+                <p
+                  class="dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  type="button"
+                  id="dropdown1"
+                >
+                  <i class="fa-regular fa-user fa-fw"></i> &nbsp; Account
+                </p>
+                <ul class="dropdown-menu" aria-labelledby="dropdown1">
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><i class="fa-solid fa-location-dot fa-fw"></i>&nbsp;
+                      Customer</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><i class="fas fa-biking fa-fw"></i>&nbsp; Driver</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><i class="fas fa-utensils fa-fw"></i>&nbsp; Resturants</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><i class="fas fa-clipboard-list fa-fw"></i>&nbsp;
+                      Logistics</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><i class="far fa-comment-alt fa-fw"></i>&nbsp; Hubs</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </li>
+
+            <li class="nav-item">
+              <div class="dropdown">
+                <a class="nav-link" href="#"
+                  ><p>
+                    <i class="fa-solid fa-cart-shopping fa-fw"></i>
+                    <span
+                      class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+                      >2</span
+                    >
+                    &nbsp; Cart
+                  </p></a
+                >
+              </div>
+            </li>
+
+            <li class="nav-item">
+              <div class="dropdown">
+                <p
+                  class="dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  type="button"
+                  id="dropdown2"
+                >
+                  <i class="fa-solid fa-ellipsis fa-fw"></i> &nbsp; Menu
+                </p>
+                <ul class="dropdown-menu" aria-labelledby="dropdown2">
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><i class="fas fa-map-marker-alt fa-fw"></i>&nbsp;
+                      Delivery locations</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><i class="fas fa-peace fa-fw"></i>&nbsp; Community</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><i class="fas fa-utensils fa-fw"></i>&nbsp; Add your
+                      resturant</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#"
+                      ><i class="far fa-newspaper fa-fw"></i>&nbsp; Blogs &
+                      News</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">
+                      <i class="far fa-comment-alt fa-fw"></i>&nbsp; Contact
+                      Us</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
       <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="./Images/logo 1.png" />
-        </a>
-        <ul class="nav justify-content-end">
-          <li class="nav-item">
-            <div class="dropdown">
-              <p
-                class="dropdown-toggle"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                type="button"
-                id="dropdown1"
-              >
-                <i class="fa-regular fa-user fa-fw"></i> &nbsp; Account
+        <div class="row">
+          <div class="col-md-6 col-sm-12 col-xs-12">
+            <div class="box">
+              <div class="banner-text">
+                <h1>
+                  Your Favourite Food<br />
+                  is on the way!
+                </h1>
+              </div>
+              <p>
+                Order lunch, fuel for meetings, home or <br />
+                late-night deliveries to the office.
               </p>
-              <ul class="dropdown-menu" aria-labelledby="dropdown1">
-                <li>
-                  <a class="dropdown-item" href="#"
-                    ><i class="fa-solid fa-location-dot fa-fw"></i>&nbsp;
-                    Customer</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    ><i class="fas fa-biking fa-fw"></i>&nbsp; Driver</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    ><i class="fas fa-utensils fa-fw"></i>&nbsp; Resturants</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    ><i class="fas fa-clipboard-list fa-fw"></i>&nbsp;
-                    Logistics</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    ><i class="far fa-comment-alt fa-fw"></i>&nbsp; Hubs</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </li>
 
-          <li class="nav-item">
-            <div class="dropdown">
-              <a class="nav-link" href="#"
-                ><p>
-                  <i class="fa-solid fa-cart-shopping fa-fw"></i
-                  > <span
-                  class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                >2</span>
-                  &nbsp; Cart
-                </p></a
-              >
+              <div class="box-search">
+                <div class="search_wrap search_wrap_1">
+                  <div class="search_box">
+                    <input
+                      type="text"
+                      class="input"
+                      placeholder="Type your location"
+                    />
+                    <div class="btn btn_common">Search</div>
+                  </div>
+                </div>
+              </div>
             </div>
-          </li>
-
-          <li class="nav-item">
-            <div class="dropdown">
-              <p
-                class="dropdown-toggle"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                type="button"
-                id="dropdown2"
-              >
-                <i class="fa-solid fa-ellipsis fa-fw"></i> &nbsp; Menu
-              </p>
-              <ul class="dropdown-menu" aria-labelledby="dropdown2">
-                <li>
-                  <a class="dropdown-item" href="#"
-                    ><i class="fas fa-map-marker-alt fa-fw"></i>&nbsp; Delivery
-                    locations</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    ><i class="fas fa-peace fa-fw"></i>&nbsp; Community</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    ><i class="fas fa-utensils fa-fw"></i>&nbsp; Add your
-                    resturant</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#"
-                    ><i class="far fa-newspaper fa-fw"></i>&nbsp; Blogs &
-                    News</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">
-                    <i class="far fa-comment-alt fa-fw"></i>&nbsp; Contact Us</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </li>
-        </ul>
+          </div>
+          <div class="col-md-6 col-sm-12 col-xs-12">
+            <img
+              src="./Images/Illustration.jpg"
+              alt="banner"
+              class="bannerimg"
+            />
+          </div>
+        </div>
       </div>
-    </nav>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-sm-12 col-xs-12">
-          <div class="box">
-            <div class="banner-text">
-            <h1>Your Favourite Food<br /> is on the way!</h1>
+    </header>
+    <main>
+      <div class="menu">
+        <div class="menu-image">
+          <img src="./Images/menu-bg.png" alt="menu" class="menu-img" />
+        </div>
+        <div class="menu-swipe">
+          <div class="container">
+            <h1>Our Menu</h1>
+            <div>
+              <h2>
+                View all <i class="fa-solid fa-angle-right fa-fw"></i>&nbsp;
+              </h2>
             </div>
-            <p>
-              Order lunch, fuel for meetings, home or <br />
-              late-night deliveries to the office.
-            </p>
-       
 
-            <div class="box-search">
-              <div class="search_wrap search_wrap_1">
-                <div class="search_box">
-                  <input
-                    type="text"
-                    class="input"
-                    placeholder="Type your location"
-                  />
-                  <div class="btn btn_common">Search</div>
+            <div class="swiper mySwiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="card">
+                    <div>
+                      <img src="./Images/pizza 1.png" alt="PIZZA" />
+                    </div>
+                    <div>
+                      <h2>Pizza</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="card">
+                    <div>
+                      <img src="./Images/fried-chicken 1.png" alt="CHICKEN" />
+                    </div>
+                    <div>
+                      <h2>Chicken</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="card">
+                    <div>
+                      <img src="./Images/burger.png" alt="BURGER" />
+                    </div>
+                    <div>
+                      <h2>Burger</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="card">
+                    <div>
+                      <img src="./Images/salad 1.png" alt="CHICKEN" />
+                    </div>
+                    <div>
+                      <h2>Salad</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="card">
+                    <div>
+                      <img src="./Images/Vector (3).png" alt="CHICKEN" />
+                    </div>
+                    <div>
+                      <h2>Fries</h2>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="card">
+                    <div>
+                      <img src="./Images/fried-rice.png" alt="CHICKEN" />
+                    </div>
+                    <div>
+                      <h2>Rice</h2>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="card">
+                    <div>
+                      <img src="./Images/Vector (3).png" alt="CHICKEN" />
+                    </div>
+                    <div>
+                      <h2>Fries</h2>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-sm-12 col-xs-12">
-          <img src="./Images/Illustration.jpg" alt="banner" class="bannerimg"/>
-        </div>
+      </div>
+
+      <div class="dishes">
+        <div class="container">
+          <h1 class="popular-dish">Popular Dishes</h1>
+          <div>
+            <h2>
+              View all <i class="fa-solid fa-angle-right fa-fw"></i>&nbsp;
+            </h2>
+          </div>
+
+          <div class="swiper mypopSwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div>
+                  <div>
+                    <img
+                      src="./Images/Rectangle 14 (1).png"
+                      alt="CEASER SALAD"
+                    />
+                    <h4>Classic Ceaser Salad</h4>
+                    <h5>N2500</h5>
+                  </div>
+                  <div></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <div>
+                    <img src="./Images/Rectangle 14.png" alt="CEASER SALAD" />
+                    <h4>Afropop Salad</h4>
+                    <h5>N1500</h5>
+                  </div>
+                  <div></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <div>
+                    <img
+                      src="./Images/Rectangle 14 (2).png"
+                      alt="CEASER SALAD"
+                    />
+                    <h4>Fruity Salad</h4>
+                    <h5>N1000</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+      <div class="brand">
+        <div class="brand-image">
+          <img src="./Images/Vector.png" alt="Vector" class="brand-img" />
+        </div>
+        <div class="container">
+          <h1>Popular Brands</h1>
+          <div>
+            <h2>
+              View all <i class="fa-solid fa-angle-right fa-fw"></i>&nbsp;
+            </h2>
+          </div>
+          <div class="swiper mypopSwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div>
+                  <div>
+                    <img
+                      src="./Images/Rectangle 14 (3).png"
+                      alt="CEASER SALAD"
+                    />
+                    <h4>Chicken Republic</h4>
+
+                    <div></div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <div>
+                    <img
+                      src="./Images/Rectangle 14 (4).png"
+                      alt="CEASER SALAD"
+                    />
+                    <h4>The Chicken House</h4>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <div>
+                    <img
+                      src="./Images/Rectangle 14 (5).png"
+                      alt="CEASER SALAD"
+                    />
+                    <h4>Chicken Capitol</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="App container">
+        <div class="App row">
+          <div class="App col-md-6 col-sm-12 col-xs-12">
+            <div class="App box">
+              <div class="App banner-text">
+                <h1>Get the Mealtime App</h1>
+              </div>
+              <p>
+                We will send you a link, open your phone <br />
+                To download the app.
+              </p>
+
+              <div class="App box-search">
+                <div class="search_wrap search_wrap_1">
+                  <div class="search_box">
+                    <div class="App-image">
+                      <img src="./Images/image 3.png" alt="app" />
+                      <img src="./Images/image 4.png" alt="app" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 col-xs-12">
+            <img
+              src="./Images/undraw_Mobile_app_p3ts (1) 1.png"
+              alt="banner"
+              class="bannerimg"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="testimonial"></div>
+    </main>
+    <footer></footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 6.5,
+        spaceBetween: 30,
+        breakpoints: {
+          // when window width is >= 320px
+          320: {
+            slidesPerView: 1.5,
+            spaceBetween: 20,
+          },
+          // when window width is >= 480px
+          480: {
+            slidesPerView: 3,
+            spaceBetween: 30,
+          },
+          // when window width is >= 640px
+          640: {
+            slidesPerView: 5.5,
+            spaceBetween: 40,
+          },
+        },
+      });
+      var swiper = new Swiper(".mypopSwiper", {
+        slidesPerView: 2.5,
+        spaceBetween: 30,
+        breakpoints: {
+          // when window width is >= 320px
+          320: {
+            slidesPerView: 1,
+            spaceBetween: 20,
+          },
+          // when window width is >= 480px
+          480: {
+            slidesPerView: 1.5,
+            spaceBetween: 30,
+          },
+          // when window width is >= 640px
+          640: {
+            slidesPerView: 2.7,
+            spaceBetween: 40,
+          },
+        },
+      });
+    </script>
   </body>
 </html>
