Final files update

--- a/index.html
+++ b/index.html
@@ -545,6 +545,50 @@
           </div>
         </div>
       </div>
+
+      <div class="foot footer">
+        <div class="foot container">
+          <div class="foot row">
+            <div class="foot col-sm-3 col-xs-12">
+              <img src="./Images/logo 1.png" alt="logo" />
+              <p>
+                Lorem ipsum has been the industry's standard<br />dummt text
+                eversince the 1500s,when an<br />unknown printer.
+              </p>
+              <span
+                ><i class="fa-brands fa-facebook fa-fw"></i
+                ><i class="fa-brands fa-linkedin fa-fw"></i
+                ><i class="fa-brands fa-instagram fa-fw"></i
+                ><i class="fa-brands fa-twitter fa-fw"></i
+              ></span>
+            </div>
+            <div class="foot col-sm-3 col-xs-12">
+              <h4>Company</h4>
+              <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Contact Us</a></li>
+              </ul>
+            </div>
+            <div class="foot col-sm-3 col-xs-12">
+              <h4>Delivery location</h4>
+              <ul>
+                <li><a href="#">Indonesia</a></li>
+                <li><a href="#">Singapore</a></li>
+                <li><a href="#">Hongkong</a></li>
+              </ul>
+            </div>
+            <div class="foot col-sm-3 col-xs-12">
+              <h4>Help</h4>
+              <ul>
+                <li><a href="#">Help centre</a></li>
+                <li><a href="#">Contact support</a></li>
+                <li><a href="#">Instructions</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
